Tried to fix background repeating when sidebar is minimised on scroll on mobile (Android Chrome) on HTML&CSS page

--- a/html&css/style.css
+++ b/html&css/style.css
@@ -8,6 +8,8 @@ body {
     background: linear-gradient(100deg,#ffce69,#fa709a);
     -webkit-font-smoothing: initial;
     background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
     font-family: 'Karla', sans-serif;
 }
 
